Padding and margin on mobile side menus fixed.

--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,14 @@ body {
     cursor: pointer;
     font-size: 3em;
     line-height: 1;
-    margin: -0.25em 0;
+    margin: -0.75em -0.5em;
     padding: 0.5em;
     transition: all .3s ease-in-out;
 }
     @media (min-width: 600px) {      /* tablet */
         .btn-close-menu {
             font-size: 4em;
-            margin: -0.7em 0 -0.5em -0.15em;
+            margin: -1em 0 -1em -0.5em;
         }
     }
     @media (min-width: 900px) {      /* desktop */
@@ -125,11 +125,11 @@ body {
 
 @media (min-width: 600px) {      /* tablet */
     .sidenav {
-        bottom: 30px;
-        left: 30px;
+        bottom: 40px;
+        left: 40px;
         padding: 2em;
-        right: 30px;
-        top: 30px;
+        right: 40px;
+        top: 40px;
         }
 }
 @media (min-width: 900px) {     /* desktop */
@@ -143,7 +143,7 @@ body {
     }
 
 .sidenav.is-visible {
-    max-height: 40em;
+    max-height: 35em;
     opacity: 01;
     overflow: scroll;
     position: fixed;
@@ -154,7 +154,7 @@ body {
 }
     @media (min-width: 600px) {      /* tablet */
         .sidenav.is-visible {
-            max-height: 50em;
+            max-height: 43em;
             padding: 3em 0 0 2em;
         }
     }
